--- a/frontend/src/profile/profile.html
+++ b/frontend/src/profile/profile.html
@@ -3,18 +3,18 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
- 	<title>Profil</title>
+ 	<title>Profile</title>
 	<link rel="stylesheet" href="../css/style.css">
-	<link rel="icon" type="image/png" href="../images/logoallpage32.png"/>
+	<link rel="icon" type="image/png" href="/images/logoallpage32.png"/>
 
 </head>
-<body class="bg-cover bg-center bg-no-repeat min-h-screen flex items-center justify-center" style="background-image: url('../images/statscyberpunk.png'); background-size: 1920px 1080px;">
+<body class="bg-cover bg-center bg-no-repeat min-h-screen flex items-center justify-center" style="background-image: url('/images/statscyberpunk.png'); background-size: 1920px 1080px;">
 
 	<div class="w-screen h-screen p-4">
 		<!-- Onglets -->
 		<div class="flex justify-center gap-4 mt-3 mb-6">
-			<button id="stats-btn" class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF] text-black hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Statistiques</button>
-			<button id="edit-btn" class="tab-button px-10 py-3 rounded-xl font-semibold bg-gray-200 text-gray-700 hover:bg-gray-300 transition">Modifier le profil</button>
+			<button id="stats-btn" class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF] text-black hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Statistics</button>
+			<button id="edit-btn" class="tab-button px-10 py-3 rounded-xl font-semibold bg-gray-200 text-gray-700 hover:bg-gray-300 transition">Edit profile</button>
 		</div>
 			
 		<!-- Formulaire d'édition -->
@@ -40,13 +40,13 @@
 					</div>
 					
 					<div class="flex items-center md:w-2/3">
-						<button id="edit-password-btn" type="button" class="px-6 py-3 bg-gray-500 text-white rounded-xl hover:bg-gray-700 transition">Change Password</button>
+						<button id="edit-password-btn" type="button" class="px-6 py-3 bg-gray-500 text-white rounded-xl hover:bg-gray-700 transition">Edit Password</button>
 					</div>
 	
 					<!-- Boutons -->
 					<div class="flex justify-start gap-6 pt-8">
-						<button type="button" id="unsave-btn" class="px-6 py-3 bg-red-500 text-white rounded-xl hover:bg-red-600 transition">Annuler</button>
-						<button type="submit" id="save-btn" class="px-6 py-3 bg-green-500 text-white rounded-xl hover:bg-green-600 transition">Sauvegarder</button>
+						<button type="button" id="unsave-btn" class="px-6 py-3 bg-red-500 text-white rounded-xl hover:bg-red-600 transition">Unsave</button>
+						<button type="submit" id="save-btn" class="px-6 py-3 bg-green-500 text-white rounded-xl hover:bg-green-600 transition">Save</button>
 					</div>      
 				</div>
 	
@@ -70,7 +70,7 @@
 						<div class="relative w-full md:w-2/3">
 							<input id="edit-currentpassword-input" required type="password" placeholder="current password" class="w-full px-4 py-3 rounded-xl border border-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-400 transition"/>
 							<button type="button" id="edit-currentpassword-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
-							<img id="edit-currentpassword-icon" src="../images/cacher.svg" class="w-6 h-10" />
+							<img id="edit-currentpassword-icon" src="/images/cacher.svg" class="w-6 h-10" />
 							</button>
 						</div>
 					</div>
@@ -81,11 +81,11 @@
 							<div class="relative w-full">
 								<input id="edit-newpassword-input" required type="password" placeholder="new password" class="w-full px-4 py-3 rounded-xl border border-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-400 transition"/>
 								<button type="button" id="edit-newpassword-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
-								<img id="edit-newpassword-icon" src="../images/cacher.svg" class="w-6 h-10" />
+								<img id="edit-newpassword-icon" src="/images/cacher.svg" class="w-6 h-10" />
 								</button>
 							</div>
-							<img id="profile-badPasswordIcon" src="../images/bad.svg" class="hidden ml-2 w-6 h-6 shrink-0" />
-							<img id="profile-goodPasswordIcon" src="../images/good.svg" class="hidden ml-2 w-6 h-6 shrink-0" />
+							<img id="profile-badPasswordIcon" src="/images/bad.svg" class="hidden ml-2 w-6 h-6 shrink-0" />
+							<img id="profile-goodPasswordIcon" src="/images/good.svg" class="hidden ml-2 w-6 h-6 shrink-0" />
 						</div>
 					</div>
 			
@@ -95,18 +95,18 @@
 							<div class="relative w-full">
 								<input id="edit-confirmpassword-input" required type="password" placeholder="confirm password" class="w-full px-4 py-3 rounded-xl border border-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-400 transition"/>
 								<button type="button" id="edit-confirmpassword-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
-								<img id="edit-confirmpassword-icon" src="../images/cacher.svg" class="w-6 h-10" />
+								<img id="edit-confirmpassword-icon" src="/images/cacher.svg" class="w-6 h-10" />
 								</button>
 							</div>
-							<img id="profile-badConfirmPasswordIcon" src="../images/bad.svg" class="hidden ml-2 w-6 h-6 shrink-0" />
-							<img id="profile-goodConfirmPasswordIcon" src="../images/good.svg" class="hidden ml-2 w-6 h-6 shrink-0" />
+							<img id="profile-badConfirmPasswordIcon" src="/images/bad.svg" class="hidden ml-2 w-6 h-6 shrink-0" />
+							<img id="profile-goodConfirmPasswordIcon" src="/images/good.svg" class="hidden ml-2 w-6 h-6 shrink-0" />
 						</div>
 					</div>
 
 					<!-- Boutons -->
 					<div class="flex justify-start gap-6 pt-8">
-						<button type="button" id="unsave-btn-edit-password" class="px-6 py-3 bg-red-500 text-white rounded-xl hover:bg-red-600 transition">Annuler</button>
-						<button type="submit" id="save-btn-edit-password" class="px-6 py-3 bg-green-500 text-white rounded-xl hover:bg-green-600 transition">Sauvegarder</button>
+						<button type="button" id="unsave-btn-edit-password" class="px-6 py-3 bg-red-500 text-white rounded-xl hover:bg-red-600 transition">Unsave</button>
+						<button type="submit" id="save-btn-edit-password" class="px-6 py-3 bg-green-500 text-white rounded-xl hover:bg-green-600 transition">Save</button>
 					</div>      
 				</div>
 			</div>
@@ -116,7 +116,7 @@
   
 			<div class="flex justify-center gap-4 mb-4 relative z-10">
     			<button id="History-btn" type="button" class="tab-button px-10 py-2 rounded-xl font-semibold bg-gray-200  text-gray-700 hover:bg-gray-300 transition ">History</button>
-    			<button id="Global-btn" type="button" class="tab-button px-10 py-2 rounded-xl font-semibold bg-[#00FFFF] text-black  hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Global</button>
+    			<button id="Global-btn" type="button" class="tab-button px-10 py-2 rounded-xl font-semibold bg-[#00FFFF] text-black  hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Overall</button>
     			<button id="Tournament-btn" type="button" class="tab-button px-10 py-2 rounded-xl font-semibold bg-gray-200 text-gray-700 hover:bg-gray-300 transition">Tournament</button>
   			</div>
 
@@ -138,12 +138,8 @@
 
 	</div>
 	
-	
-	<script type="module" src="profile.js"></script>
-	<script type="module" src="stats.js"></script>
-	<script type="module" src="history.js"></script>
-	<!-- <script type="module" src="global.js"></script> -->
 
+	<script type="module" src="profile.ts"></script>
 	
 </body>
 </html>
