--- a/frontend/src/search/search.html
+++ b/frontend/src/search/search.html
@@ -5,10 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
  	<title>replace me</title>
 	<link rel="stylesheet" href="../css/style.css">
-	<link rel="icon" type="image/png" href="../images/logoallpage32.png"/>
+	<link rel="icon" type="image/png" href="/images/logoallpage32.png"/>
 </head>
 
-<body id="body" class="bg-black bg-cover bg-center bg-no-repeat h-screen flex" style="background-image: url('../images/statscyberpunk.png'); background-size: 1920px 1080px;">
+<body id="body" class="bg-black bg-cover bg-center bg-no-repeat h-screen flex" style="background-image: url('/images/statscyberpunk.png'); background-size: 1920px 1080px;">
 
 	<div class="w-1/4 min-w-[200px] rounded-2xl m-5 p-4 flex flex-col items-center border-4 border-blue-300 bg-white/5 backdrop-blur-lg shadow-[0_0_10px_#00FFFF]">
 		<div class="flex flex-col items-center gap-9 w-full">
@@ -28,18 +28,18 @@
 					<button id="notification" class="w-10 h-10 bg-transparent flex items-center justify-center rounded-full"><svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-700" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /></svg>
 					</button>
-					<div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Accueil</div>
+					<div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Home</div>
 				</div>
 				<div class="relative group">
 					<button id="profileBtn" type="button" class="w-14 h-14 bg-gray-200 rounded-full"></button>
-					<div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Profil</div>
+					<div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Profile</div>
 				</div>
 		  	</div>
 		</div>
 
 		<div class="h-full rounded-2xl m-3 p-2 flex flex-col border-4 border-blue-300 bg-white/5 backdrop-blur-lg shadow-[0_0_10px_#00FFFF]">
 			<div class="flex justify-center gap-4 mt-2 mb-6">
-				<button id="global-btn-search" class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF] text-black hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Global</button>
+				<button id="global-btn-search" class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF] text-black hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Overall</button>
 				<button id="history-btn-search" class="tab-button px-10 py-3 rounded-xl font-semibold bg-gray-200 text-gray-700 hover:bg-gray-300 transition">History</button>
 			</div>
 
@@ -50,8 +50,7 @@
 		</div>
 	</div>
 
-	<script src="../profile/redirectionbtn.js"></script>
-	<script type="module" src="../search/btn.js"></script>
+	<script type="module" src="search.ts"></script>
 
 </body>
 </html>
