--- a/frontend/src/game/ai/ai.html
+++ b/frontend/src/game/ai/ai.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8" />
-	<title>AI</title>
+	<title>ai</title>
 	<link rel="stylesheet" href="../../../css/style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 	<link rel="icon" type="image/png" href="/src/images/logoallpage32.png"/>
