--- a/frontend/src/profile/profile.html
+++ b/frontend/src/profile/profile.html
@@ -125,11 +125,29 @@
 				<div id="History-Div" class="hidden w-11/12 h-[75vh] space-y-6 overflow-y-auto bg-white/5 backdrop-blur p-6 rounded-2xl shadow-[0_0_20px_rgba(0,0,0,1),0_0_40px_rgba(0,0,0,0.9),0_0_60px_rgba(0,0,0,0.8)] mx-auto">
 				</div>
 
-				<div id="Global-Div" class="w-11/12 h-[75vh] space-y-6 bg-white/5 backdrop-blur p-6 rounded-2xl shadow-[0_0_20px_rgba(0,0,0,1),0_0_40px_rgba(0,0,0,0.9),0_0_60px_rgba(0,0,0,0.8)] mx-auto" >
-					<!-- <canvas id="pieChart" width="400" height="400"></canvas> -->
-					<!-- <canvas id="lineChart" width="400" height="400"></canvas> -->
+				<div id="Global-Div" class="w-11/12 h-[75vh] space-y-6 bg-white/5 backdrop-blur p-6 rounded-2xl shadow-[0_0_20px_rgba(0,0,0,1),0_0_40px_rgba(0,0,0,0.9),0_0_60px_rgba(0,0,0,0.8)] mx-auto">
+					<!-- Statistiques principales -->
+					<div class="flex w-full space-x-40">
+						<!-- Parties jouées -->
+					  <div class="flex flex-col items-center justify-center mx-10 bg-white/10 h-40 rounded-xl w-1/4">
+						<p class="text-5xl text-white text-center font-semibold">GAME PLAYED</p>
+						<p class="text-5xl text-[#00FFFF] text-center font-bold">156</p>
+					  </div>
+				  
+					  <!-- Points gagnés -->
+					  <div class="flex flex-col items-center justify-center bg-white/10 h-40 rounded-xl w-1/4">
+						<p class="text-5xl text-white text-center font-semibold">POINTS EARNED</p>
+						<p class="text-5xl text-[#00FFFF] text-center font-bold">2050</p>
+					  </div>
+					  <!-- Graphique circulaire -->
+					  <div class="flex items-center justify-center w-60 h-60 rounded-full bg-white/10 border-4 border-[#00FFFF]">
+						<p class="text-5xl text-white text-center font-semibold">POINTS EARNED</p>
+						<p class="text-5xl text-[#00FFFF] text-center font-bold">2050</p>
+						<canvas class="w-full h-full rounded-full bg-transparent"></canvas>
+					  </div>
+					</div>
 				</div>
-			
+					
 				<div id="Tournament-Div" class="hidden rounded-2xl w-11/12 h-full bg-white/5 backdrop-blur p-6 shadow-[0_0_20px_rgba(0,0,0,1),0_0_40px_rgba(0,0,0,0.9),0_0_60px_rgba(0,0,0,0.8)]" >
 
 				</div>
