--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,9 +9,7 @@
 	<link rel="icon" type="image/png" href="/images/iconpage.png"/>
 </head>
 
-<body id="body" class="bg-center bg-no-repeat min-h-screen flex items-center justify-center" style="background-image: url('/images/logincyberpunk.png'); background-size: 1920px 1080px;">
-	<div id="app-container"></div>
-	
+<body class="bg-center bg-no-repeat min-h-screen flex items-center justify-center" style="background-image: url('/images/logincyberpunk.png'); background-size: 1920px 1080px;">	
 	<script type="module" src="src/main.ts"></script>
 </body>
 </html>
