--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -1,23 +1,29 @@
 <div class="w-1/4 min-w-[200px] rounded-2xl m-5 p-4 flex flex-col border-4 border-blue-300 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]">
 	<div class="text-center text-xl font-bold mb-4 text-white">CHAT</div>
 	<!-- Zone d'affichage des messages -->
-	<div id="chat-messages" class="flex-1 overflow-y-auto flex flex-col mb-4 space-y-2 whitespace-pre-wrap pb-2"></div>
+	<div id="chat-messages" class="flex-1 overflow-y-auto flex flex-col mb-4 space-y-4 p-4 [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-track]:bg-black/20 [&::-webkit-scrollbar-thumb]:bg-[#00FFFF] [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-thumb]:border [&::-webkit-scrollbar-thumb]:border-[#00FFFF] [&::-webkit-scrollbar-thumb]:shadow-[0_0_5px_#00FFFF]"></div>
 	<!-- Zone d'entrée + bouton -->
 	<div class="flex items-center gap-2 w-full">
 		 <input id="chat-input" type="text" placeholder="Enter a message" class="p-2 text-white rounded-2xl flex-grow min-w-0 border-2 border-blue-200 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]" />
-		<button id="chat-send" class="w-8 h-8 bg-gray-500 text-white rounded-full flex items-center justify-center shrink-0 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]">➤</button>
+		<button id="chat-send" class="w-10 h-10 text-2xl text-white rounded-full flex items-center justify-center shrink-0 ">➤</button>
+		<button id="pong-send" class="w-10 h-10 rounded-full flex items-center justify-center shrink-0 ">
+			<img src="/images/pong_racquet.png" alt="">
+		</button>
 	</div>
 </div>
 
 <div class="flex-1 flex flex-col">
 	<!-- TOP BAR -->
 	<div class="flex items-center justify-between p-5">
-		<input id="search-bar" type="search" placeholder="search" class="border-2 text-white border-spacing-4 p-3 rounded-xl w-5/6 border-blue-300 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]"/>
+		<!-- Centre la barre de recherche avec une largeur fixe -->
+		<div class="flex-1 flex justify-center">
+			<input id="search-bar" type="search" placeholder="search" class="border-2 text-white border-spacing-4 p-3 rounded-xl w-[500px] border-blue-300 bg-white/5 backdrop-blur-lg shadow-[0_0_10px_#00FFFF]"/>
+		</div>
 		<div id="topbar-buttons" class="flex items-center gap-6">
-			<!-- Bouton home avec tooltip -->
+			<!-- Ajuster la taille du bouton home et de l'image -->
 			<div class="relative group">
-				<a href="/home" data-link id="home" class="w-10 h-10 bg-transparent flex items-center justify-center rounded-full"><svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-700" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /></svg>
+				<a href="/home" data-link id="home" class="w-16 h-16 flex items-center justify-center rounded-full">
+					<img src="/images/Home.png" alt="" class="w-14 h-14">
 				</a>
 				<div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Home</div>
 			</div>
@@ -30,18 +36,43 @@
 	</div>
 
 	<!-- Contenu -->
-	<div class="flex-1 flex flex-col items-center justify-center gap-9 p-6">
+	<div class="flex-1 flex flex-col items-center justify-center gap-16 p-6">
 		<!-- Carrousel -->
 		<div class="flex items-center gap-4 relative ">
-			<button id="left-button-game" class="text-5xl text-white">&lt;</button>
-			<div class="w-96 h-80 bg-gray-200 rounded-lg relative flex flex-col items-center justify-center gap-4 border-4 border-blue-300 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]">
+			<button id="left-button-game" class="text-5xl text-[#00FFFF] drop-shadow-[0_0_10px_#00FFFF]">&lt;</button>
+			<div class="w-96 h-72 bg-gray-200 rounded-lg relative flex flex-col items-center justify-center gap-4 border-4 border-blue-300 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]">
 				<div id="game-mode" class="text-white px-4 py-1.5 rounded text-3xl font-bold"></div>
 				<div id="description-game-mode" class="text-white px-4 py-10 rounded text-md font-bold"></div>
-				<button id="game-play-button" class="bg-green-500 text-white font-bold py-2 px-6 rounded-full hover:bg-green-600 transition duration-200">Play</button>
+				<button id="game-play-button" class="bg-[#0f9292] text-white font-bold py-2 px-6 rounded-full hover:brightness-150 transition duration-200 shadow-[0_0_10px_#0f9292]">Play</button>
 			</div>
-			<button id="right-button-game" class="text-5xl text-white">&gt;</button>
+			<button id="right-button-game" class="text-5xl text-[#00FFFF] drop-shadow-[0_0_10px_#00FFFF]">&gt;</button>
 		</div>
 
-		<div class="w-full max-w-4xl h-48 bg-gray-200 rounded-xl border-4 border-blue-300 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]"></div>
+		<div id="tournament-section" class="w-full h-72 rounded-xl border-4 border-blue-300 bg-white/5 backdrop-blur-lg shadow-[0_0_10px_#00FFFF] flex flex-col items-center p-6">
+			<!-- Titre -->
+			<h2 class="text-4xl font-bold text-[#00FFFF] mb-8 drop-shadow-[0_0_10px_#00FFFF]">Tournament</h2>
+			
+			<!-- Container pour les boutons et la zone du vainqueur -->
+			<div class="flex items-center justify-between w-full">
+				<!-- Bouton Join -->
+				<button id="join-tournament" class="bg-[#0f9292] ml-32 text-white text-2xl font-bold py-5 px-10 rounded-full hover:brightness-150 transition duration-200 shadow-[0_0_10px_#0f9292]">
+					Join
+				</button>
+
+				<!-- Zone du dernier vainqueur -->
+				<div class="flex items-center bg-white/10 backdrop-blur-lg rounded-full px-8 py-4 border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
+					<div class="w-12 h-12 rounded-full bg-gray-200 border-2 border-[#00FFFF]"></div>
+					<div class="ml-3 text-white">
+						<p class="text-2xl font-bold">Last Winner</p>
+						<p id="winner-name" class="text-xl text-[#00FFFF]">Username</p>
+					</div>
+				</div>
+
+				<!-- Bouton Create -->
+				<button id="create-tournament" class="bg-[#0f9292] text-white text-2xl mr-32 font-bold py-5 px-10 rounded-full hover:brightness-150 transition duration-200 shadow-[0_0_10px_#0f9292]">
+					Create
+				</button>
+			</div>
+		</div>
 	</div>
 </div>
