--- a/frontend/src/pages/login.html
+++ b/frontend/src/pages/login.html
@@ -29,6 +29,6 @@
 
 	<button type="submit" class="w-full bg-[#00FFFF] text-black font-bold px-4 py-2 rounded-lg hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Sign In</button>
 	<div class="flex justify-end mt-4">
-		<a href="/register" data-link id="to-sign-up" class="underline cursor-pointer text-[#00FFFF] font-bold ">Sign Up</span>
+		<a href="/register" data-link id="to-sign-up" class="hover:underline cursor-pointer text-[#00FFFF] font-bold ">Sign Up</span>
 	</div>
 </form>
