--- a/frontend/src/pages/register.html
+++ b/frontend/src/pages/register.html
@@ -52,7 +52,7 @@
   
 	<button type="submit" class="w-full bg-[#00FFFF] text-black font-bold px-4 py-2 rounded-lg hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Sign Up</button>
 	<div class="flex justify-end">
-		<a href="/login" data-link id="to-sign-in" class="underline cursor-pointer text-[#00FFFF] text-sm ">Already have an account ?</a>
+		<a href="/login" data-link id="to-sign-in" class="hover:underline cursor-pointer text-[#00FFFF] text-sm ">Already have an account ?</a>
 	</div>
 </form>
 
