--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -15,12 +15,10 @@
 <div class="flex-1 flex flex-col">
 	<!-- TOP BAR -->
 	<div class="flex items-center justify-between p-5">
-		<!-- Centre la barre de recherche avec une largeur fixe -->
 		<div class="flex-1 flex justify-center">
-			<input id="search-bar" type="search" placeholder="search" class="border-2 text-white border-spacing-4 p-3 rounded-xl w-[500px] border-blue-300 bg-white/5 backdrop-blur-lg shadow-[0_0_10px_#00FFFF]"/>
+			<input id="search-bar" type="search" placeholder="search" class="border-2 ml-40 text-white border-spacing-4 p-3 rounded-xl w-[500px] border-blue-300 bg-white/5 backdrop-blur-lg shadow-[0_0_10px_#00FFFF]"/>
 		</div>
 		<div id="topbar-buttons" class="flex items-center gap-6">
-			<!-- Ajuster la taille du bouton home et de l'image -->
 			<div class="relative group">
 				<a href="/home" data-link id="home" class="w-16 h-16 flex items-center justify-center rounded-full">
 					<img src="/images/Home.png" alt="" class="w-14 h-14">
@@ -50,7 +48,7 @@
 
 		<div id="tournament-section" class="w-full h-72 rounded-xl border-4 border-blue-300 bg-white/5 backdrop-blur-lg shadow-[0_0_10px_#00FFFF] flex flex-col items-center p-6">
 			<!-- Titre -->
-			<h2 class="text-4xl font-bold text-[#00FFFF] mb-8 drop-shadow-[0_0_10px_#00FFFF]">Tournament</h2>
+			<h2 class="text-4xl font-bold text-white mb-8 drop-shadow-[0_0_10px_#FFFFFF]">Tournament</h2>
 			
 			<!-- Container pour les boutons et la zone du vainqueur -->
 			<div class="flex items-center justify-between w-full">
