--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -1,30 +1,52 @@
-<div class="w-1/4 min-w-[200px] rounded-2xl m-5 p-4 flex flex-col border-4 border-blue-300 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]">
-	<div class="text-center text-xl font-bold mb-4 text-white">CHAT</div>
-	<!-- Zone d'affichage des messages -->
-	<div id="chat-messages" class="flex-1 overflow-y-auto flex flex-col mb-4 space-y-4 p-4 [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-track]:bg-black/20 [&::-webkit-scrollbar-thumb]:bg-[#00FFFF] [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-thumb]:border [&::-webkit-scrollbar-thumb]:border-[#00FFFF] [&::-webkit-scrollbar-thumb]:shadow-[0_0_5px_#00FFFF]"></div>
-	<!-- Zone d'entrée + bouton -->
-	<div class="flex items-center gap-2 w-full">
-		 <input id="chat-input" type="text" placeholder="Enter a message" class="p-2 text-white rounded-2xl flex-grow min-w-0 border-2 border-blue-200 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]" />
-		<button id="chat-send" class="w-10 h-10 text-2xl text-white rounded-full flex items-center justify-center shrink-0 ">➤</button>
-		<button id="pong-send" class="w-10 h-10 rounded-full flex items-center justify-center shrink-0 ">
-			<img src="/images/pong_racquet.png" alt="">
-		</button>
-	</div>
+<div class="w-1/4 min-w-[200px] rounded-2xl m-5 p-4 flex flex-col border-4 border-[#B026FF] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#B026FF] font-mono relative overflow-hidden">
+    
+    <div class="flex items-center justify-between mb-4 border-b border-[#FF0F4D] pb-2">
+        <div class="text-[#ad39f0] font-bold flex items-center">
+            <span class="mr-2 text-[#FF2E9F]">⚡</span>
+            CHAT://global
+            <span class="ml-2 animate-pulse text-[#FF2E9F]">_</span>
+        </div>
+    </div>
+
+    <!-- Messages area -->
+    <div id="chat-messages" class="flex-1 overflow-y-auto flex flex-col mb-4 space-y-4 p-4 
+        [&::-webkit-scrollbar]:w-2 
+        [&::-webkit-scrollbar-track]:bg-black/20 
+        [&::-webkit-scrollbar-thumb]:bg-[#00FFFF] 
+        [&::-webkit-scrollbar-thumb]:rounded-none 
+        font-mono text-sm">
+    </div>
+    
+    <!-- Input area -->
+    <div class="flex items-center gap-2 w-full border-t border-[#00FFFF] pt-2 bg-black/40">
+        <span class="text-[#00FFFF] animate-pulse">></span>
+        <input id="chat-input" 
+            type="text" 
+            placeholder="Enter command..." 
+            class="bg-transparent p-2 text-[#00FFFF] flex-grow min-w-0 border-none focus:outline-none focus:ring-0 placeholder-[#00FFFF]/50" />
+        <button id="chat-send" class="text-[#00FFFF] hover:text-white transition-colors px-2">⮐</button>
+        <button id="pong-send" class="w-8 h-8 rounded flex items-center justify-center hover:bg-[#00FFFF]/10 transition-colors">
+            <img src="/images/pong_racquet.png" alt="" class="w-6 h-6">
+        </button>
+    </div>
 </div>
 
+<!-- Main content section -->
 <div class="flex-1 flex flex-col">
 	<!-- TOP BAR -->
 	<div class="flex items-center justify-between p-5">
 		<div class="flex-1 flex justify-center">
-			<input id="search-bar" type="search" placeholder="search" class="border-2 ml-40 text-white border-spacing-4 p-3 rounded-xl w-[500px] border-blue-300 bg-white/5 backdrop-blur-lg shadow-[0_0_10px_#00FFFF]"/>
+			<input id="search-bar" type="search" placeholder="Search users... " class="font-mono border-2 ml-40 text-[#FF2E9F] rounded-2xl border-spacing-4 p-3 w-[500px] 
+    border-[#FF2E9F] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#FF2E9F] 
+    placeholder-[#FF2E9F]/50 focus:outline-none focus:border-[#B026FF]"/>
 		</div>
 		<div id="topbar-buttons" class="flex items-center gap-6">
-			<div class="relative group">
-				<a href="/home" data-link id="home" class="w-16 h-16 flex items-center justify-center rounded-full">
-					<img src="/images/Home.png" alt="" class="w-14 h-14">
-				</a>
-				<div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Home</div>
-			</div>
+    <div class="relative group">
+        <div class="w-32 h-12 border-2 border-[#39FF14] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#39FF14]/20 transition-all duration-200 shadow-[0_0_10px_#39FF14]">
+            <span class="text-[#00FFFF] font-bold text-lg">HOME</span>
+        </div>
+        <div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Home</div>
+    </div>
 			<!-- Bouton Profile avec tooltip -->
 			<div class="relative group">
 				<a href="/profile/statistics" data-link id="profileBtn" type="button" class="w-14 h-14 bg-gray-200 rounded-full"></a>
@@ -34,41 +56,40 @@
 	</div>
 
 	<!-- Contenu -->
-	<div class="flex-1 flex flex-col items-center justify-center gap-16 p-6">
+	<div class="flex-1 flex flex-col items-center justify-center gap-16 mt-10 p-6 pb-5">
 		<!-- Carrousel -->
-		<div class="flex items-center gap-4 relative ">
-			<button id="left-button-game" class="text-5xl text-[#00FFFF] drop-shadow-[0_0_10px_#00FFFF]">&lt;</button>
-			<div class="w-96 h-72 bg-gray-200 rounded-lg relative flex flex-col items-center justify-center gap-4 border-4 border-blue-300 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]">
-				<div id="game-mode" class="text-white px-4 py-1.5 rounded text-3xl font-bold"></div>
-				<div id="description-game-mode" class="text-white px-4 py-10 rounded text-md font-bold"></div>
-				<button id="game-play-button" class="bg-[#0f9292] text-white font-bold py-2 px-6 rounded-full hover:brightness-150 transition duration-200 shadow-[0_0_10px_#0f9292]">Play</button>
+		<div class="flex items-center gap-4 relative">
+			<button id="left-button-game" class="text-5xl text-[#00FFFF] drop-shadow-[0_0_10px_#00FFFF] hover:text-[#0f9292] transition-colors">&lt;</button>
+			<div class="w-96 h-72 relative flex flex-col items-center justify-center gap-4 border-4 rounded-2xl border-[#0f9292] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#0f9292] font-mono">
+				<div id="game-mode" class="text-[#39FF14] px-4 py-1.5 rounded text-3xl font-bold "></div>
+				<div id="description-game-mode" class="text-[#39FF14]/80 px-4 py-10 rounded text-md font-bold"></div>
+				<button id="game-play-button" class="bg-transparent border-2 rounded-xl border-[#00FFFF] text-[#00FFFF] font-bold py-2 px-6 hover:bg-[#0f9292]/20 transition duration-200 shadow-[0_0_10px_#00FFFF]">
+					 PLAY 
+				</button>
 			</div>
-			<button id="right-button-game" class="text-5xl text-[#00FFFF] drop-shadow-[0_0_10px_#00FFFF]">&gt;</button>
+			<button id="right-button-game" class="text-5xl text-[#00FFFF] drop-shadow-[0_0_10px_#00FFFF] hover:text-[#0f9292] transition-colors">&gt;</button>
 		</div>
 
-		<div id="tournament-section" class="w-full h-72 rounded-xl border-4 border-blue-300 bg-white/5 backdrop-blur-lg shadow-[0_0_10px_#00FFFF] flex flex-col items-center p-6">
-			<!-- Titre -->
-			<h2 class="text-4xl font-bold text-white mb-8 drop-shadow-[0_0_10px_#FFFFFF]">Tournament</h2>
+		<!-- Tournament Section -->
+		<div id="tournament-section" class="w-full h-[290px] border-4 mt-14 rounded-2xl border-[#1fb82c] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#1fb82c] flex flex-col items-center p-6 font-mono relative">
 			
-			<!-- Container pour les boutons et la zone du vainqueur -->
+			<h2 class="text-4xl font-bold text-[#00FFFF] mb-8 drop-shadow-[0_0_10px_#00FFFF]">TOURNAMENT</h2>
+			
 			<div class="flex items-center justify-between w-full">
-				<!-- Bouton Join -->
-				<button id="join-tournament" class="bg-[#0f9292] ml-32 text-white text-2xl font-bold py-5 px-10 rounded-full hover:brightness-150 transition duration-200 shadow-[0_0_10px_#0f9292]">
-					Join
+				<button id="join-tournament" class="bg-transparent rounded-xl ml-20 border-2 border-[#FFD700] text-[#FFD700] text-2xl font-bold py-5 px-10 hover:bg-[#FFD700]/20 transition duration-200 shadow-[0_0_10px_#FFD700]">
+					 JOIN 
 				</button>
 
-				<!-- Zone du dernier vainqueur -->
-				<div class="flex items-center bg-white/10 backdrop-blur-lg rounded-full px-8 py-4 border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
-					<div class="w-12 h-12 rounded-full bg-gray-200 border-2 border-[#00FFFF]"></div>
-					<div class="ml-3 text-white">
-						<p class="text-2xl font-bold">Last Winner</p>
-						<p id="winner-name" class="text-xl text-[#00FFFF]">Username</p>
+				<div class="flex items-center bg-black/40 px-8 py-4 border-2 rounded-2xl border-[#B026FF] shadow-[0_0_10px_#B026FF]">
+					<div class="w-12 h-12 rounded-full bg-black/50 border-2 border-[#B026FF]"></div>
+					<div class="ml-3">
+						<p class="text-2xl font-bold text-[#FFD700]">LAST WINNER</p>
+						<p id="winner-name" class="text-xl text-[#FF2E9F]">[ username ]</p>
 					</div>
 				</div>
 
-				<!-- Bouton Create -->
-				<button id="create-tournament" class="bg-[#0f9292] text-white text-2xl mr-32 font-bold py-5 px-10 rounded-full hover:brightness-150 transition duration-200 shadow-[0_0_10px_#0f9292]">
-					Create
+				<button id="create-tournament" class="bg-transparent border-2 border-[#FFD700] mr-20 rounded-xl text-[#FFD700] text-2xl font-bold py-5 px-10 hover:bg-[#FFD700]/20 transition duration-200 shadow-[0_0_10px_#FFD700]">
+					 CREATE 
 				</button>
 			</div>
 		</div>
