--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -42,8 +42,8 @@
 		</div>
 		<div id="topbar-buttons" class="flex items-center gap-6">
     <div class="relative group">
-        <div class="w-32 h-12 border-2 border-[#39FF14] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#39FF14]/20 transition-all duration-200 shadow-[0_0_10px_#39FF14]">
-            <span class="text-[#00FFFF] font-bold text-lg">HOME</span>
+        <div class="w-32 h-12 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
+            <span class="text-[#FFD700] font-bold text-lg">HOME</span>
         </div>
         <div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Home</div>
     </div>
@@ -61,8 +61,8 @@
 		<div class="flex items-center gap-4 relative">
 			<button id="left-button-game" class="text-5xl text-[#00FFFF] drop-shadow-[0_0_10px_#00FFFF] hover:text-[#0f9292] transition-colors">&lt;</button>
 			<div class="w-96 h-72 relative flex flex-col items-center justify-center gap-4 border-4 rounded-2xl border-[#0f9292] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#0f9292] font-mono">
-				<div id="game-mode" class="text-[#39FF14] px-4 py-1.5 rounded text-3xl font-bold "></div>
-				<div id="description-game-mode" class="text-[#39FF14]/80 px-4 py-10 rounded text-md font-bold"></div>
+				<div id="game-mode" class="text-[#00FFFF] px-4 py-1.5 rounded text-3xl font-bold "></div>
+				<div id="description-game-mode" class="text-[#00FFFF]/80 px-4 py-10 rounded text-md font-bold"></div>
 				<button id="game-play-button" class="bg-transparent border-2 rounded-xl border-[#00FFFF] text-[#00FFFF] font-bold py-2 px-6 hover:bg-[#0f9292]/20 transition duration-200 shadow-[0_0_10px_#00FFFF]">
 					 PLAY 
 				</button>
@@ -71,7 +71,7 @@
 		</div>
 
 		<!-- Tournament Section -->
-		<div id="tournament-section" class="w-full h-[290px] border-4 mt-14 rounded-2xl border-[#1fb82c] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#1fb82c] flex flex-col items-center p-6 font-mono relative">
+		<div id="tournament-section" class="w-full h-[290px] border-4 mt-14 rounded-2xl border-[#00FFFF] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#00FFFF] flex flex-col items-center p-6 font-mono relative">
 			
 			<h2 class="text-4xl font-bold text-[#00FFFF] mb-8 drop-shadow-[0_0_10px_#00FFFF]">TOURNAMENT</h2>
 			
